# hops-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  mise.toml
.ai/: context.md
.github/workflows/: on-pr-quality.yaml  on-push-main-version-and-tag.yaml  on-v-tag-release.yaml  quality.yaml
bootstrap/drc/: local-dev.yaml
bootstrap/helm/: pc.yaml
bootstrap/k8s/: pc.yaml
bootstrap/providers/: provider-helm.yaml  provider-kubernetes.yaml
bootstrap/registry/: registry.yaml
skills/claude/: SKILL.md
skills/claude/references/: config-install.md  debugging.md  local-setup.md  secrets.md  stacks-and-xrs.md  xr-workflow.md
src/: logging.rs  main.rs
src/commands/: mod.rs  xr.rs
src/commands/ai/: claude.rs  codex.rs  mod.rs
src/commands/config/: generate_configuration.rs  install.rs  mod.rs  uninstall.rs
src/commands/local/: aws.rs  config.rs  destroy.rs  github.rs  install.rs  kubefwd.rs  mod.rs  reset.rs  start.rs  stop.rs  unconfig.rs  uninstall.rs
src/commands/secrets/: decrypt.rs  encrypt.rs  init.rs  list.rs  mod.rs  sync.rs
src/commands/validate/: mod.rs
src/commands/xr/: adopt.rs  manage.rs  mod.rs  observe.rs  orphan.rs  reconcile.rs  tests.rs
src/commands/xr/helpers/: discovery.rs  manifest.rs  mod.rs  runtime_discovery.rs  types.rs
